      + Save and restore config.sub and config.guess.  Thanks to
        Till Kamppeter.
      + Move copying of new config.sub and config.guess to
        autoconfigure-stamp, or else saving and restoring has no effect.
    - install: Replace use of pwd with $(CURDIR).
    - Use quilt in place of dpatch, and add rule to generate quilt patch
      series from patches branch in git.
  * debian/control:
    - Add W. van den Akker to Uploaders.
    - ijsgutenprint: Recommend foomatic-db-gutenprint.
    - Update description of GIMP Print plugin.
  * debian/cups-driver-gutenprint.NEWS: New file.
    - Document automatic upgrade of print queue backends.
    - Document USB backend device ID upgrade problems.
  * debian/cups-driver-gutenprint.*: Replace use of cupsys with cups.
  * debian/patches/10_cups_modeldir.dpatch: Remove.
  * debian/patches/20_fix_gimpprint_menu_entry.dpatch: Remove.  Not needed,
    and no longer compiled with GIMP >= 2.4.
  * debian/patches/21_gutenprintui_plist_localefix.dpatch: Remove.  Since
    PPD files are no longer generated, we don't need to patch the source
    to use /usr/share/ppd.

 -- Roger Leigh <rleigh@debian.org>  Sat, 01 Nov 2008 16:43:27 +0000

gutenprint (5.2.1-1) experimental; urgency=low

  [ W. van den Akker ]
  * Upgraded to Standards version 3.8.0.
  * debian/*: Update version from 5.1 to 5.2. 

  [ Roger Leigh ]
  * New upstream stable release.
  * debian/control.in: Add Vcs-Browser and Vcs-Git fields. 
  * debian/control.in: Remove, leaving debian/control.
  * debian/control: Remove unnecessary version information in package
    descriptions.
  * debian/control: Rename cupsys-driver-gutenprint to
    cups-driver-gutenprint (already done in 5.0 branch).
  * debian/control: Remove dependencies prior to Lenny, including
    unneeded versioning and old transitional dependencies.
  * debian/rules: Remove library soname substitution in package names. 
  * debian/README.building: Remove old outdated instructions. 